# AstarteBot

./: .gitignore  BUGS.md  Cargo.toml  README.md
src/: backup.rs  bot.rs  config.rs  db.rs  llm.rs  logging.rs  main.rs  mcp.rs  memory.rs  rag.rs  tools.rs  types.rs
