[package]
name = "astartebot"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
anyhow = "1"
html2text = "0.14"
candle-core = "0.8"
candle-onnx = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = "0.4"
rocksdb = { version = "0.24", default-features = false, features = ["snappy"] }
